cleanup of typos and static code analysis issues